# CloudDataCenterSimulator

./: .gitignore  CMakeLists.txt  LICENSE
config/: config.ini
lib/: CMakeLists.txt  ini.h
src/: CMakeLists.txt  main.cpp
src/AllocationStrategies/: IAllocationStrategy.h
src/AllocationStrategies/BasicAllocationStrategy/: BasicAllocationStrategy.cpp  BasicAllocationStrategy.h
src/AllocationStrategies/ILPStrategy/: ILPStrategy.cpp  ILPStrategy.h
src/AllocationStrategies/OpenStackWithoutMigration/: OpenStackWithoutMigration.cpp  OpenStackWithoutMigration.h
src/CloudDataCenter/: CloudDataCenter.cpp  CloudDataCenter.h
src/EventDispatcher/: EventDispatcher.cpp  EventDispatcher.h
src/Events/: Event.h  EventTypes.h
src/GlobalTimer/: GlobalTimer.cpp  GlobalTimer.h
src/MachineRoom/: MachineRoom.cpp  MachineRoom.h
src/Machines/: Machines.h  Resources.h
src/Machines/PhysicalMachine/: PhysicalMachine.cpp  PhysicalMachine.h
src/Machines/VirtualMachine/: VirtualMachine.h
src/RequestManager/: RequestManager.cpp  RequestManager.h
src/StatisticsManager/: StatisticsManager.cpp  StatisticsManager.h
src/Utilities/: ReservablePrioQ.h  util.h
